--- a/app/src/main/res/layout/activity_summoners.xml
+++ b/app/src/main/res/layout/activity_summoners.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.Summoners.SummonersActivity">
+    tools:context=".features.summoners.SummonersActivity">
 
     <TextView
         android:id="@+id/textView"
