--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,15 @@
 <resources>
+    <!-- use in activity_champions.xml -->
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- use in option_card.xml -->
+    <dimen name="card_height">150dp</dimen>
+    <dimen name="md_keylines">16dp</dimen>
+    <dimen name="card_image_height">100dp</dimen>
+    <dimen name="card_title_height">40dp</dimen>
+
+    <dimen name="article_subheading">16sp</dimen>
+
+
+    <dimen name="navheader_height">222dp</dimen>
 </resources>
