--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -11,13 +11,13 @@
         <item
             android:id="@+id/action_summoner"
             android:enabled="true"
-            android:icon="@drawable/ic_access_time_white_24dp"
+            android:icon="@drawable/ic_search"
             android:title="@string/searchSummonerButton"
             app:showAsAction="ifRoom" />
         <item
             android:id="@+id/action_info"
             android:enabled="true"
-            android:icon="@drawable/ic_audiotrack_white_24dp"
+            android:icon="@android:drawable/ic_lock_idle_lock"
             android:title="@string/searchChampionInfoButton"
             app:showAsAction="ifRoom" />
     </group>
