--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
 
     <color name="white">#FFFFFF</color>
     <color name="button_grey">#757575</color>
+
+    <color name="dark_grey">#424242</color>
 </resources>
