--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,8 +8,14 @@
     <dimen name="card_image_height">100dp</dimen>
     <dimen name="card_title_height">40dp</dimen>
 
-    <dimen name="article_subheading">16sp</dimen>
+    <dimen name="heading">32sp</dimen>
+    <dimen name="subheading">16sp</dimen>
 
 
     <dimen name="navheader_height">222dp</dimen>
+
+    <!-- RECYCLER VIEW -->
+    <dimen name="tile_padding">8dp</dimen>
+    <dimen name="tile_height">160dp</dimen>
+    <dimen name="article_titles">20sp</dimen>
 </resources>
