--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_settings"
+    android:name="be.manu.statsforleague.features.settings.SettingsFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".features.settings.SettingsActivity">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+</fragment>
